ref(Rooms): Adding Colors, new interaction and others