@@ -5,24 +5,28 @@ import org.uniba.kobold.entities.room.RoomInteractionResult;
 import org.uniba.kobold.entities.room.RoomInteractionResultType;
 import org.uniba.kobold.parser.ParserOutput;
 import org.uniba.kobold.type.Command;
+import org.uniba.kobold.util.ColorText;
 
 import javax.swing.*;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Set;
 
 public final class PubRoom extends Room {
 
     public PubRoom() {
-        super("bar",
-                "Il bar è pieno di coboldi, di fronte a te c'è un bancone con un coboldo barista. " +
-                        "Sulla tua sinistra ci sono dei coboldi che giocano a carte" +
-                        "Sulla tua destra c'è un'uscita che da su uno SPIAZZALE",
+        super("taverna",
+                "La " + ColorText.setTextPurple("taverna")+" è piena di coboldi,\n"+ ColorText.setTextBlue("davanti")  +" a te c'è un bancone con un coboldo " + ColorText.setTextOrange("barista") +
+                        "\nsulla tua " + ColorText.setTextBlue("sinistra")  + " ci sono dei coboldi che giocano a carte, mentre" +
+                        "\nsulla tua "+ ColorText.setTextBlue("destra")  +" c'è un'uscita che da su uno " + ColorText.setTextPurple("spiazzale"),
                 new ImageIcon("/img/BR.png"),
-                Arrays.asList(),
-                Arrays.asList(),
+                List.of(),
+                List.of(),
                 Arrays.asList(
                     new Command("vai spiazzale", Set.of("muoviti")),
-                    new Command("gioca blackjack", Set.of("gioca","blackjack", "carte"))
+                    new Command("gioca blackjack", Set.of("gioca","blackjack", "carte")),
+                    new Command("vai caverna", Set.of("caverna")),
+                    new Command("parla barista", Set.of("parla","barista"))
                 )
         );
     }
@@ -33,19 +37,22 @@ public final class PubRoom extends Room {
 
         switch (command.getCommand().getName()) {
             case "guarda davanti":
-                result.setSubject("Guardi davanti e vedi il bancone del barista, è indaffarato a servire gli altri clienti ma avrà tempo per te");
+                result.setSubject("Guardi davanti e vedi il bancone del " + ColorText.setTextOrange("barista") + ", è indaffarato a servire gli altri clienti ma avrà tempo per te");
                 break;
             case "guarda dietro":
-                result.setSubject("Guardi dietro e vedi il corridoio da dove sei arrivato");
+                result.setSubject("Guardi dietro e vedi le guardie che ti hanno seguito, forse è meglio non fare niente di strano");
                 break;
             case "guarda destra":
-                result.setSubject("Guardi a destra e un'uscita che da su uno SPIAZZALE");
+                result.setSubject("Guardi a destra e un'uscita che da su uno " + ColorText.setTextPurple("spiazzale"));
                 break;
             case "guarda sinistra":
-                result.setSubject("Guardi a sinistra e vedi un gruppo di coboldi che giocano a blackjack, sei abbastanza ludopatico per giocare.");
+                result.setSubject("Guardi a sinistra e vedi un gruppo di coboldi che giocano a " + ColorText.setTextBlue("blackjack") + ", sei abbastanza ludopatico per giocare.");
                 break;
             case "guarda sopra":
-                result.setSubject("Una normale (Gauss shit) parete in legno");
+                result.setSubject("bel soffitto");
+                break;
+            case "guarda giu":
+                result.setSubject("bel pavimento");
                 break;
             case "vai spiazzale":
                 result.setResultType(RoomInteractionResultType.MOVE);
@@ -53,7 +60,15 @@ public final class PubRoom extends Room {
                 break;
             case "gioca blackjack":
                 result.setResultType(RoomInteractionResultType.PLAY);
-                result.setSubject("king");
+                result.setSubject("blackjack");
+                break;
+            case "vai caverna":
+                result.setResultType(RoomInteractionResultType.DESCRIPTION);
+                result.setSubject("Le guardie ti vedono e dicono dove vuoi andare bello? ");
+                break;
+            case "parla barista":
+                result.setResultType(RoomInteractionResultType.PLAY);
+                result.setSubject("barman");
                 break;
             default:
                 result.setResultType(RoomInteractionResultType.NOTHING);
